--- a/css/queries.css
+++ b/css/queries.css
@@ -18,7 +18,7 @@
   background-position: bottom;
 }
 
-main {
+.main {
   width: 100%;
   height: 65vh;
   background-color: white;
@@ -156,7 +156,7 @@ h2 {
   height: 40vh;
 }
 
-main {
+.main {
   height: 60vh;
 }
 
@@ -182,7 +182,7 @@ main {
     height: 40vh;
   }
   
-  main {
+  .main {
     height: 55vh;
   }  
 
@@ -257,7 +257,7 @@ main {
   width: 90vw;
 }
 
-main {
+.main {
   height: 55vh;
 }
 
